--- a/public/styles.css
+++ b/public/styles.css
@@ -18,6 +18,8 @@ html {
 
 #sidebar {
   width: 400px;
+  height: 100%;
+  overflow: hidden;
   overflow-y: auto;
   background: linear-gradient(
     135deg,
