--- a/public/styles.css
+++ b/public/styles.css
@@ -6,7 +6,8 @@ html {
   height: 100%;
   display: flex;
   flex-direction: column;
-  background: url("war.jpg") no-repeat center center fixed;
+  background: url("assets/images/logo.png") no-repeat center center fixed;
+  background-color: #9fafaf;
   background-size: cover;
 }
 
@@ -17,10 +18,11 @@ html {
 }
 
 #sidebar {
-  width: 400px;
+  width: 20vw;
   overflow-y: auto;
   background: rgba(34, 34, 34, 0.9); /* Semi-transparent dark background */
   padding: 20px;
+  padding-right: 45px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.7);
 }
 
@@ -65,7 +67,7 @@ html {
 
 #pdf-frame {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   border: none;
 }
 
